Fix combo box scrollbars issues

--- a/community-edition/style/theme/xdefault/components.scss
+++ b/community-edition/style/theme/xdefault/components.scss
@@ -33,29 +33,29 @@
     border-right: none;
   }
 
-  .InovuaReactDataGrid__column-header__filter--select__scroller {
-    &.inovua-react-scroll-container__scroller {
-      outline: none;
+  // .InovuaReactDataGrid__column-header__filter--select__scroller {
+  //   &.inovua-react-scroll-container__scroller {
+  //     outline: none;
 
-      &::-webkit-scrollbar {
-        width: 14px;
-      }
+  //     &::-webkit-scrollbar {
+  //       width: 14px;
+  //     }
 
-      &::-webkit-scrollbar-thumb {
-        box-shadow: inset 0 0 0 10px $INOVUA_SCROLL_CONTAINER_THUMB_COLOR;
-        border: 4px solid transparent;
-        border-radius: 10px;
-      }
+  //     &::-webkit-scrollbar-thumb {
+  //       box-shadow: inset 0 0 0 10px $INOVUA_SCROLL_CONTAINER_THUMB_COLOR;
+  //       border: 4px solid transparent;
+  //       border-radius: 10px;
+  //     }
 
-      &::-webkit-scrollbar-corner {
-        background: transparent;
-      }
+  //     &::-webkit-scrollbar-corner {
+  //       background: transparent;
+  //     }
 
-      &::-webkit-scrollbar-button {
-        display: none;
-      }
-    }
-  }
+  //     &::-webkit-scrollbar-button {
+  //       display: none;
+  //     }
+  //   }
+  // }
 
   .inovua-react-toolkit-radio-button {
     margin-bottom: 0;
